# action_work

./: .env.example  .gitignore  LICENSE  README.md  README_linux_zh.md  README_zh.md  _init_.py  clear_data.py  config.yaml  main.py  pyproject.toml  pytest.ini  read.md  requirements.txt  run_action_dependency_pipeline.sh  run_pipeline.sh
analysis/: _init_.py  action_dependency_analysis.py  recommendations.py  supply_chain_risk_report.py
crawler/: _init_.py  action_dependency_crawler.py  actions_crawler.py  dependency_extractor.py  github_api_client.py  repo_crawler.py
docs/: section_iv_icse_draft.md
notebooks/: action_dependecy_exploration.py
output/: executive_summary.md
processors/: _init_.py  action_dependency_resolver.py  graph_builder.py  graph_visualizer.py  security_analyzer.py  security_dashboard.py  time_series_plotter.py
scripts/: enrich_component_types.py  generate_section4_tables.py  plot_amplification_metrics.py  plot_component_type_comparison.py  plot_discovery_risk.py  plot_isolation_risk.py  plot_paper_figures.py  plot_privilege_risk.py  plot_privileged_blast_radius.py  plot_propagation_risk.py  plot_ref_risk.py  plot_reusable_workflow.py  plot_section4_figures.py  plot_stratified_comparisons.py  plot_trust_amplification.py  plot_update_windows.py
test/: github_api.py  main_simple.py  test_import.py
tests/: test_amplification_metrics.py  test_component_type_comparison.py  test_discovery_risk.py  test_evidence_strength.py  test_isolation_risk.py  test_privilege_risk.py  test_privileged_blast_radius.py  test_propagation_risk.py  (+4 more)
(+87 files in other folders)
